--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "dependencies": {
     "next": "12.0.3",
+    "next-themes": "^0.0.15",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.15",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
     "eslint": "7.32.0",
