--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
     "swr": "^1.0.1"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.15",
+    "@types/react-transition-group": "^4.4.4",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@types/styled-components": "^5.1.15",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
     "typescript": "4.4.4"
