--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "next": "12.0.3",
     "next-themes": "^0.0.15",
     "nprogress": "^0.2.0",
@@ -18,9 +19,9 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
-    "@types/react-transition-group": "^4.4.4",
     "@types/node": "16.11.7",
     "@types/react": "17.0.34",
+    "@types/react-transition-group": "^4.4.4",
     "@types/styled-components": "^5.1.15",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.3",
