--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
     "swr": "^1.0.1"
